package site.kiselev;

/**
 * Main Application class
 */
public class App {

    public static void main(String[] args) {
        BugTrackerBot bugTrackerBot = new BugTrackerBot();
    }

}
